# sec-advisor

./: .gitignore  DECISIONS.md  Dockerfile  README.md  app.py  embed_and_store.py  evaluate.py  fetch_snapshot.py  parse_records.py  pyproject.toml  rag_chain.py  stack_exposure.py
.claude/skills/build-status/: SKILL.md
.claude/skills/scope-check/: SKILL.md
.github/workflows/: refresh-data.yml  sync.yml
data/: clean_records.jsonl  eval_report.json
