[project]
name = "secadvisor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
